--- a/graphql-lwt/test/dune
+++ b/graphql-lwt/test/dune
@@ -5,5 +5,7 @@
 (alias
  (name runtest)
  (package graphql-lwt)
- (deps (:test lwt_test.exe))
- (action (run %{test})))
+ (deps
+  (:test lwt_test.exe))
+ (action
+  (run %{test})))
