--- a/graphql_parser/src/dune
+++ b/graphql_parser/src/dune
@@ -8,4 +8,5 @@
  (name graphql_parser)
  (public_name graphql_parser)
  (libraries fmt re)
- (flags (:standard -w -30)))
+ (flags
+  (:standard -w -30)))
