--- a/graphql-cohttp/src/dune
+++ b/graphql-cohttp/src/dune
@@ -1,7 +1,9 @@
 (rule
  (targets assets.ml)
- (deps (source_tree assets))
- (action (run %{bin:ocaml-crunch} -m plain assets -o assets.ml)))
+ (deps
+  (source_tree assets))
+ (action
+  (run %{bin:ocaml-crunch} -m plain assets -o assets.ml)))
 
 (library
  (name graphql_cohttp)
