update to dune 2

--- a/graphql-async/test/dune
+++ b/graphql-async/test/dune
@@ -2,8 +2,8 @@
  (libraries graphql-async alcotest async_kernel async_unix)
  (name async_test))
 
-(alias
- (name runtest)
+(rule
+ (alias runtest)
  (package graphql-async)
  (deps
   (:test async_test.exe))
